FCS-872: Visualise production min max (#649)
* FCS-876: Initial visualisation

* FCS-872: Refactored code, and fixed incorrect names for HighchartsColours

* less duplication

* FCS-872: Update to allow govuk colours declared per bar, and updated tests.

* FCS-872: Added test coverage and updated test utils

* FCS-872: Updated failing tests.

* FCS-872: Changes requested on PR.

* FCS-872: Fixed chart headers.

* FCS-872: Checkstyle

* FCS-872: Added long-term consent graphs.

* FCS-872: Added comment explaining High charts quirk.

* FCS-872: Updated chart titles to include min/max and year appropriately

* FCS-872: Updated and refactored chart Summaries and Production Types.

---------

Co-authored-by: dgrinbergs <dainis.grinbergs@fivium.co.uk>